# dotfiles

./: .gitignore  CLAUDE.md  README.md  bootstrap.sh  install.sh  setup-remote.sh  snippets-cheatsheet.md
bash/: .bashrc  .bashrc.d  .secrets.template
bash/.config/: starship.toml
git/: .gitconfig
nvim/.config/nvim/lua/config/: custom.lua  lazy.lua
nvim/.config/nvim/lua/plugins/: godot.lua  snippets.lua
nvim/.config/nvim/snippets/: package.json  typescript.json
reference/: astro-js-patterns.md
ssh/.ssh/: config
task/: .taskrc
templates/astro-template/: .containerignore  .env.example  .gitignore  Containerfile  astro.config.mjs  package-lock.json  package.json  podman-compose.yml  tsconfig.json
templates/astro-template/src/: env.d.ts
templates/astro-template/src/lib/: config.ts  firebase.ts
templates/astro-template/src/pages/: index.astro
templates/astro-template/src/pages/api/: health.ts  items.ts
templates/flask-template/: .containerignore  .env.example  .gitignore  Containerfile  podman-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
templates/flask-template/app/: __init__.py  config.py
templates/flask-template/app/lib/: firebase.py
templates/flask-template/app/routes/: health.py  items.py
templates/flask-template/tests/: test_health.py
tmux/: .tmux.conf
vscode/.config/Code/User/snippets/: javascript.json  python.json
